# vector-db-cpp

./: .gitignore  AGENTS.md  CMakeLists.txt  GEMINI.md  README.md  notes.md
include/: distance.hpp  flat_index.cpp  flat_index.hpp  ivf_flat_index.cpp  ivf_flat_index.hpp  ivf_pq.cpp  ivf_pq.hpp  kmeans.cpp  kmeans.hpp  product_quantizer.cpp  product_quantizer.hpp  vector_index.hpp
notes/: notes.md
tests/: eval.cpp  main.cpp
